--- a/secrets.yaml
+++ b/secrets.yaml
@@ -1,8 +1,17 @@
+#Pippero78!
+
+# Your Wi-Fi SSID and password
+wifi_ssid: "192.168.199.29"
+wifi_password: ""
+
 # Note: these are just examples
 
-wifi_iot_ssid: "YourWiFiSSID"
-wifi_iot_bssid: "12:34:56:78:90:12"
-wifi_iot_password: "YourWiFiPassword"
+wifi_iot_ssid: "OrnellaNetwork"
+#wifi_iot_bssid: "12:34:56:78:90:12"
+wifi_iot_password: "Macach3r0$s"
 
-clock_fallback_ap_password: "secret-random-password-123"
-clock_ota_password: "super-secret-ota-password-123"
+clock_fallback_ap_password: "12345678"
+#clock_ota_password: "super-secret-ota-password-123"
+
+
+
